--- a/package.json
+++ b/package.json
@@ -6,22 +6,64 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "postinstall": "npm run prisma:generate"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "@chakra-ui/react": "^2.8.2",
+    "@clerk/clerk-react": "^4.30.10",
+    "@clerk/nextjs": "^4.29.12",
+    "@emotion/react": "^11.11.4",
+    "@emotion/serialize": "^1.1.4",
+    "@emotion/styled": "^11.11.5",
+    "@fluentui/react": "^8.117.7",
+    "@fluentui/react-cards": "^0.205.147",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@prisma/client": "^3.8.2",
+    "@types/react-tooltip": "^4.2.4",
+    "axios": "^1.6.2",
+    "bluebird": "^3.7.2",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.2.4",
+    "idb-keyval": "^6.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.12.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.2",
+    "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "react-star-ratings": "^2.3.0",
+    "react-tooltip": "^5.26.3",
+    "simple-oauth2": "^5.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/axios": "^0.14.0",
+    "@types/bluebird": "^3.5.42",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "prisma": "^3.8.2",
+    "tailwindcss": "^3.4.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.9.5"
   }
 }
